--- a/contact.html
+++ b/contact.html
@@ -15,9 +15,16 @@
       margin: 0;
       background-color: #f4f4f4;
       text-align: center;
+      padding: 1rem;
     }
     h1 {
       margin-bottom: 1rem;
+    }
+    p.note {
+      margin-top: 1rem;
+      font-size: 0.95rem;
+      color: #666;
+      max-width: 300px;
     }
     a.button {
       display: inline-block;
@@ -38,5 +45,6 @@
   <h1>Сохранить контакт</h1>
   <p>Нажмите кнопку ниже, чтобы добавить контакт Бехзода Аминова в телефонную книгу.</p>
   <a class="button" href="/behzod_aminov.vcf">Скачать контакт</a>
+  <p class="note">Если контакт не открывается автоматически — нажмите на скачанный файл вручную.</p>
 </body>
 </html>
