--- a/contact-larisa.html
+++ b/contact-larisa.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Сохранить контакт — Лариса Ли</title>
+  <title>Сохранить контакт — Лара Ли</title>
   <style>
     body {
       font-family: sans-serif;
@@ -43,7 +43,7 @@
 </head>
 <body>
   <h1>Сохранить контакт</h1>
-  <p>Нажмите кнопку ниже, чтобы добавить контакт Ларисы Ли в телефонную книгу.</p>
+  <p>Нажмите кнопку ниже, чтобы добавить контакт Лары Ли в телефонную книгу.</p>
   <a class="button" href="/larisa_li.vcf">Скачать контакт</a>
   <p class="note">Если контакт не открывается автоматически — нажмите на скачанный файл вручную.</p>
 </body>
